Сверстал BottomSheetBehavior и добавил его во фрагмент

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -100,4 +100,8 @@
 
     </androidx.core.widget.NestedScrollView>
 
+    <include
+        android:id="@+id/bottom_sheet_include"
+        layout="@layout/main_bottom_sheet"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
