--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,9 @@
     <dimen name="side_guideline_size">10dp</dimen>
     <dimen name="main_image_height">400dp</dimen>
     <dimen name="main_image_margin_top">6dp</dimen>
+    <dimen name="main_bottom_sheet_peek_height">80dp</dimen>
+    <dimen name="bottom_sheet_line_width">25dp</dimen>
+    <dimen name="bottom_sheet_line_height">2dp</dimen>
+    <dimen name="bottom_sheet_line_margin_top">5dp</dimen>
+    <dimen name="bottom_sheet_header_margin_top">5dp</dimen>
 </resources>
