Добавил BottomAppBar в разметку, добавил иконку гамбургера для него и увеличил высоту BottomSheet

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -102,6 +102,14 @@
 
     <include
         android:id="@+id/bottom_sheet_include"
-        layout="@layout/main_bottom_sheet"/>
+        layout="@layout/main_bottom_sheet" />
+
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottom_app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:backgroundTint="@color/purple_500"
+        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
