--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="bottom_sheet_line_height">2dp</dimen>
     <dimen name="bottom_sheet_line_margin_top">5dp</dimen>
     <dimen name="bottom_sheet_header_margin_top">5dp</dimen>
+    <dimen name="bottom_navigation_margin">8dp</dimen>
 </resources>
