--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="bottom_sheet_line_margin_top">5dp</dimen>
     <dimen name="bottom_sheet_header_margin_top">5dp</dimen>
     <dimen name="bottom_navigation_margin">8dp</dimen>
+    <dimen name="main_bottom_sheet_padding">10dp</dimen>
+    <dimen name="main_chip_group_margin_top">20dp</dimen>
 </resources>
