--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -110,7 +110,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:backgroundTint="@color/purple_500"
+        android:backgroundTint="?attr/colorPrimaryVariant"
         app:menu="@menu/menu_bottom_app_bar"
         app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />
 
