--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--AppThemeColors-->
+    <!--AppThemeColors/Night-->
     <color name="primaryColor">#1565c0</color>
     <color name="primaryLightColor">#5e92f3</color>
-    <color name="primaryDarkColor">#003c8f</color>
+    <color name="primaryDarkColor">#303D50</color>
     <color name="secondaryColor">#64b5f6</color>
     <color name="secondaryLightColor">#9be7ff</color>
     <color name="secondaryDarkColor">#2286c3</color>
     <color name="primaryTextColor">#ffffff</color>
-    <color name="secondaryTextColor">#000000</color>
-
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="gray">#66000000</color>
-    <color name="light_grey">#f6f6fa</color>
-    <color name="bottom_sheet_line_color">#663b4351</color>
+    <color name="secondaryTextColor">#ffffff</color>
 </resources>
