Добавил атрибут для фона bottom sheet dialog, добавил стиль для него же, определил его цвета в обоих темах

--- a/app/src/main/res/layout/main_bottom_sheet.xml
+++ b/app/src/main/res/layout/main_bottom_sheet.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_sheet_container"
+    style="@style/MainBottomSheetDialog"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_grey"
     android:paddingStart="@dimen/main_bottom_sheet_padding"
     android:paddingEnd="@dimen/main_bottom_sheet_padding"
     app:behavior_hideable="true"
