--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#66000000</color>
     <color name="light_grey">#f6f6fa</color>
+    <color name="dark_grey">#242424</color>
     <color name="bottom_sheet_line_color">#663b4351</color>
 </resources>
