--- a/app/src/main/res/layout/main_bottom_sheet.xml
+++ b/app/src/main/res/layout/main_bottom_sheet.xml
@@ -24,11 +24,10 @@
 
     <TextView
         android:id="@+id/bottom_sheet_header"
+        style="@style/Header.BottomSheetDialogHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/bottom_sheet_header_margin_top"
-        android:textColor="@color/black"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bottom_sheet_line"
