--- a/app/src/main/res/layout/main_bottom_sheet.xml
+++ b/app/src/main/res/layout/main_bottom_sheet.xml
@@ -10,10 +10,7 @@
 
     <View
         android:id="@+id/bottom_sheet_line"
-        android:layout_width="@dimen/bottom_sheet_line_width"
-        android:layout_height="@dimen/bottom_sheet_line_height"
-        android:layout_marginTop="@dimen/bottom_sheet_line_margin_top"
-        android:background="@color/bottom_sheet_line_color"
+        style="@style/BottomSheetLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
