Сверстал фрагмент настроек

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="bottom_navigation_margin">8dp</dimen>
     <dimen name="main_bottom_sheet_padding">10dp</dimen>
     <dimen name="main_chip_group_margin_top">20dp</dimen>
+    <dimen name="settings_header_margin_top">10dp</dimen>
 </resources>
