Изменил стиль навигации и добавил новый пункт "настройки"

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -16,4 +16,9 @@
         android:icon="@drawable/ic_screen_three"
         android:title="Page 3" />
 
+    <item
+        android:id="@+id/settings"
+        android:icon="@drawable/ic_outline_settings_24"
+        android:title="@string/settings" />
+
 </menu>
