--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/page_one"
-        android:icon="@drawable/ic_screen_one"
-        android:title="Page 1" />
+        android:id="@+id/main"
+        android:icon="@drawable/ic_outline_home_24"
+        android:title="@string/main" />
 
     <item
         android:id="@+id/page_two"
