--- a/app/src/main/res/layout/fragment_mars.xml
+++ b/app/src/main/res/layout/fragment_mars.xml
@@ -65,7 +65,7 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/image_view"
         android:layout_width="0dp"
-        android:layout_height="400dp"
+        android:layout_height="@dimen/mars_image_height"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
