--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -38,6 +38,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="11dp"
             android:alpha="0"
+            android:tint="?attr/imageButtonColor"
             app:layout_constraintBottom_toBottomOf="@id/constraint_search_field"
             app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
