--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,5 +14,6 @@
         <!-- Customize your theme here. -->
         <item name="bottomSheetDialogBackgroundColor">@color/light_grey</item>
         <item name="bottomSheetDialogHeaderTextColor">@color/black</item>
+        <item name="imageButtonColor">@color/black</item>
     </style>
 </resources>
