--- a/app/src/main/res/layout/fragment_mars.xml
+++ b/app/src/main/res/layout/fragment_mars.xml
@@ -77,7 +77,8 @@
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/image_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:alpha="0" />
 
     </FrameLayout>
 
